--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.9.0",
     "@babel/runtime": "^7.6.3",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "parcel-bundler": "^1.11.0",
     "parcel-plugin-clean-dist": "0.0.6"
   }
